# friday-tony-stark-demo

./: FRIDAY_INTEGRATION_GUIDE.py  PDF_SOLVER_FILE_GUIDE.md  PDF_SOLVER_IMPLEMENTATION_SUMMARY.md  PDF_SOLVER_QUICKREF.md  PDF_SOLVER_README.md  QUICK_START_PDF_SOLVER.py  TODO.md  TODO2.md  TODO3.md  TODO4.md  TODO5.md  TODO_FRIDAY.md  TODO_JARVIS.md  TODO_STARTUP.md  TODO_UI.md  agent_friday.py  cleanup_syntax.py  debug_start.py  main.py  pyproject.toml  run.bat  server.py  setup_pdf_solver.py  test_learning.py  test_pdf_solver.py  test_tools.py  test_voice.py
.claude/: settings.local.json
.omc/: project-memory.json
.omc/state/: agent-replay-6d2d27fe-6c33-44a5-8481-1b70217e6480.jsonl  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
core/: agent.py  router.py
friday/: __init__.py  config.py  main.py
friday/automation/: __init__.py  gui.py  scheduler.py
friday/autonomous/: __init__.py  alerts.py  run.py  scanner.py  scheduler.py
friday/core/: agent.py  executor.py  memory_manager.py  planner.py  router.py
friday/dashboard/: app.py
friday/data/: loader.py  validator.py
friday/intelligence/: __init__.py  indicators.py  predictor.py  risk_manager.py  strategy.py
friday/learning/: __init__.py  dashboard.py  evaluator.py  feedback.py  learning.py  logger.py  metrics.py  trainer.py
friday/llm/: local_llm.py
friday/memory/: __init__.py  cleaner.py  long_term.py  memory.py  retrieve.py  (+4 more)
learning/: database.db  evaluator.py  logger.py  metrics.py  trainer.py
llm/: local_llm.py
system/: actions.py
ui/: app.py
voice/: input.py
(+19 files in other folders)
